# tiny-http-server

./: README.md  pyproject.toml
src/: server.py
src/tiny_http_server/: server.py
tests/: test_server.py
